infra/crash-game-prod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-game 
  namespace: staging
  labels:
    app: crash-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crash-game
  template:
    metadata:
      labels:
        app: crash-game
    spec:
      containers:
        - image: registry.digitalocean.com/wallfair/crash-game-k8s
          imagePullPolicy: Always
          name: crash-game-backend
          ports:
            - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: crash-game-backend
  namespace: staging
spec:
  selector:
    app: crash-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
